Develop: fix Header & wrap header elements on TR/LR/LQA

--- a/public/css/sass/cattool.scss
+++ b/public/css/sass/cattool.scss
@@ -13,19 +13,16 @@ body.cattool {
 
     /*header*/
     header {
-        background: #4D4D4D;
         top: 0;
         left: 0;
         width: 100%;
         position: relative;
         z-index: 12;
-        border-bottom: 1px solid #333;
         padding: 0;
         transition: margin-top 200ms ease-out;
         -webkit-transition: margin-top 200ms ease-out;
         box-sizing: content-box;
         min-width: 1024px;
-        min-height: 49px;
     }
     .main-container {
         width: 100%;
