--- a/public/css/sass/components/header/search.scss
+++ b/public/css/sass/components/header/search.scss
@@ -4,9 +4,6 @@
     width: 100%;
     font-size: 12px;
     background: #ffffff;
-    z-index: 1;
-    padding: 0 !important;
-    margin-top: 3px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.45);
     .block.buttons {
         margin-top: -6px !important;
